benchmarks/verus/bignum/vericoder_glm_15-09_18h46/debug/bignum_ModExp_Add_Zeroes_iter7_error.log
=== Verification Error - Iteration 7 ===
File: /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/files/bignum_ModExp_Add_Zeroes.rs
Time: 2025-09-15 18:57:32

Full Error Output:
--------------------------------------------------------------------------------
Compilation failed: error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_Add_Zeroes_impl.rs:31:9
   |
25 | exec fn str2int_exec(s: &Vec<char>) -> (result: int)
   |                                                 --- expected `vstd::prelude::int` because of return type
...
31 |         0
   |         ^ expected `int`, found integer

error[E0277]: cannot multiply `{integer}` by `vstd::prelude::int`
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_Add_Zeroes_impl.rs:37:11
   |
37 |         2 * rest_val + bit_val
   |           ^ no implementation for `{integer} * vstd::prelude::int`
   |
   = help: the trait `std::ops::Mul<vstd::prelude::int>` is not implemented for `{integer}`
   = help: the following other types implement trait `std::ops::Mul<Rhs>`:
             `&f128` implements `std::ops::Mul<f128>`
             `&f128` implements `std::ops::Mul`
             `&f16` implements `std::ops::Mul<f16>`
             `&f16` implements `std::ops::Mul`
             `&f32` implements `std::ops::Mul<f32>`
             `&f32` implements `std::ops::Mul`
             `&f64` implements `std::ops::Mul<f64>`
             `&f64` implements `std::ops::Mul`
           and 57 others

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_Add_Zeroes_impl.rs:46:13
   |
46 |     if n == 0 {
   |        -    ^ expected `int`, found integer
   |        |
   |        expected because this is `vstd::prelude::int`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_Add_Zeroes_impl.rs:51:25
   |
51 |         while current > 0
   |               -------   ^ expected `int`, found integer
   |               |
   |               expected because this is `vstd::prelude::int`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_Add_Zeroes_impl.rs:55:36
   |
55 |             let bit = if current % 2 == 1 { '1' } else { '0' };
   |                          -------   ^ expected `int`, found integer
   |                          |
   |                          expected because this is `vstd::prelude::int`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_Add_Zeroes_impl.rs:55:41
   |
55 |             let bit = if current % 2 == 1 { '1' } else { '0' };
   |                          -----------    ^ expected `int`, found integer
   |                          |
   |                          expected because this is `vstd::prelude::int`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_Add_Zeroes_impl.rs:57:33
   |
57 |             current = current / 2;
   |                       -------   ^ expected `int`, found integer
   |                       |
   |                       expected because this is `vstd::prelude::int`

error[E0308]: mismatched types
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_Add_Zeroes_impl.rs:109:47
    |
109 |     let result_nat = mod_exp_iterative_helper(1, initial_power, &sy_vec, mod_val);
    |                      ------------------------ ^ expected `int`, found integer
    |                      |
    |                      arguments to this function are incorrect
    |
note: function defined here
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_Add_Zeroes_impl.rs:65:9
    |
65  | exec fn mod_exp_iterative_helper(
    |         ^^^^^^^^^^^^^^^^^^^^^^^^
66  |     current_result: int,
    |     -------------------

error: aborting due to 8 previous errors

Some errors have detailed explanations: E0277, E0308.
For more information about an error, try `rustc --explain E0277`.

--------------------------------------------------------------------------------

Additional Output:
error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_Add_Zeroes_impl.rs:31:9
   |
25 | exec fn str2int_exec(s: &Vec<char>) -> (result: int)
   |                                                 --- expected `vstd::prelude::int` because of return type
...
31 |         0
   |         ^ expected `int`, found integer

error[E0277]: cannot multiply `{integer}` by `vstd::prelude::int`
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_Add_Zeroes_impl.rs:37:11
   |
37 |         2 * rest_val + bit_val
   |           ^ no implementation for `{integer} * vstd::prelude::int`
   |
   = help: the trait `std::ops::Mul<vstd::prelude::int>` is not implemented for `{integer}`
   = help: the following other types implement trait `std::ops::Mul<Rhs>`:
             `&f128` implements `std::ops::Mul<f128>`
             `&f128` implements `std::ops::Mul`
             `&f16` implements `std::ops::Mul<f16>`
             `&f16` implements `std::ops::Mul`
             `&f32` implements `std::ops::Mul<f32>`
             `&f32` implements `std::ops::Mul`
             `&f64` implements `std::ops::Mul<f64>`
             `&f64` implements `std::ops::Mul`
           and 57 others

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_Add_Zeroes_impl.rs:46:13
   |
46 |     if n == 0 {
   |        -    ^ expected `int`, found integer
   |        |
   |        expected because this is `vstd::prelude::int`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_Add_Zeroes_impl.rs:51:25
   |
51 |         while current > 0
   |               -------   ^ expected `int`, found integer
   |               |
   |               expected because this is `vstd::prelude::int`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_Add_Zeroes_impl.rs:55:36
   |
55 |             let bit = if current % 2 == 1 { '1' } else { '0' };
   |                          -------   ^ expected `int`, found integer
   |                          |
   |                          expected because this is `vstd::prelude::int`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_Add_Zeroes_impl.rs:55:41
   |
55 |             let bit = if current % 2 == 1 { '1' } else { '0' };
   |                          -----------    ^ expected `int`, found integer
   |                          |
   |                          expected because this is `vstd::prelude::int`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_Add_Zeroes_impl.rs:57:33
   |
57 |             current = current / 2;
   |                       -------   ^ expected `int`, found integer
   |                       |
   |                       expected because this is `vstd::prelude::int`

error[E0308]: mismatched types
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_Add_Zeroes_impl.rs:109:47
    |
109 |     let result_nat = mod_exp_iterative_helper(1, initial_power, &sy_vec, mod_val);
    |                      ------------------------ ^ expected `int`, found integer
    |                      |
    |                      arguments to this function are incorrect
    |
note: function defined here
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_Add_Zeroes_impl.rs:65:9
    |
65  | exec fn mod_exp_iterative_helper(
    |         ^^^^^^^^^^^^^^^^^^^^^^^^
66  |     current_result: int,
    |     -------------------

error: aborting due to 8 previous errors

Some errors have detailed explanations: E0277, E0308.
For more information about an error, try `rustc --explain E0277`.
